tests/errors/first_stage/.string/expected_end_quotes/expected_end_quotes.as
; .string expected end quotes to finish the string
.string "Hello, world!